--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
   "name": "playground",
   "version": "1.0.0",
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
   "jest": {
-    "verbose": true
+    "preset": "ts-jest/presets/js-with-babel",
+    "verbose": true,
+    "transform": {
+      "^.+\\.(js|ts)$": "ts-jest"
+    }
   },
   "dependencies": {
     "@babel/preset-env": "^7.13.15",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.39",
+    "decimal.js": "^10.2.1",
     "eslint": "^7.24.0",
+    "fast-text-encoding": "^1.0.3",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "test": "jest --watchAll",
-    "start": "nodemon pigLatin.js"
+    "start": "nodemon src/pigLatin.js",
+    "start:watch": "ts-node-dev  --respawn src/decimal.ts"
   }
 }
