--- a/package.json
+++ b/package.json
@@ -8,23 +8,26 @@
       "^.+\\.(js|ts)$": "ts-jest"
     }
   },
-  "dependencies": {
-    "@babel/preset-env": "^7.13.15",
+  "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.39",
-    "decimal.js": "^10.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
-    "fast-text-encoding": "^1.0.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "decimal.js": "^10.2.1",
+    "fast-text-encoding": "^1.0.3",
+    "ts-node": "^9.1.1"
   },
   "scripts": {
     "test": "jest --watchAll",
     "start": "nodemon src/pigLatin.js",
-    "start:watch": "ts-node-dev  --respawn src/decimal.ts"
+    "start:watch": "ts-node-dev --respawn src/decimal.ts"
   }
 }
